2007-04-09  Sanel <karijes@users.sourceforge.net>

	* Build script tweaks
	* Removed some warrnings
	* Added XSet class

2007-04-06  Sanel <karijes@users.sourceforge.net>

	* Almost done build scripts. For now everything
	works as expected

2007-04-05  Sanel <karijes@users.sourceforge.net>

	* Rewritten Jamrules
	* Removed needs for dirname

2007-04-04  Sanel <karijes@users.sourceforge.net>

	* s/vsprintf/vsnprintf in Debug.cpp
	* Small attempts toward configure integration

2007-04-03  Sanel <karijes@users.sourceforge.net>

	* Documented Nls.h
	* Now XDG Base Directory functions return String
	(with that tests discovered few bugs with previous char-only version :P)
	* Added dir_exists, dir_readable, dir_writeable

2007-04-02  Sanel <karijes@users.sourceforge.net>

	* String self assignement checks added
	* Added very usefull timer.hpp from boost
	* At last documented String class, but some functions
	are left undocumented, mostly becaus of doxygen's stupidity
	* Added support for locales
	* Added Ask.{h,cpp} with .fl data and icons for them

2007-04-01  Sanel <karijes@users.sourceforge.net>

	* Added operator+ to String
	* Added copy ctors for varions operators in String
	* ...and tests for them

2007-03-29  Sanel <karijes@users.sourceforge.net>

	* Added String::substr with tests
	* Removed left playing with Cleandir

2007-03-27  Sanel <karijes@users.sourceforge.net>

	* Added functions that should return XDG paths,
	of EDE_XXX their equivalents.
	* Added (althought unfinished) installation rules 
	to Jamrules

2007-03-26  Sanel <karijes@users.sourceforge.net>

	* Added String::printf
	* String::capacity() behaviour is now more Standard-like

2007-03-25  Sanel <karijes@users.sourceforge.net>

	* A better String class with more methods.
	* Updated tests too.
	* Addded str_ends.

2007-03-23  Sanel <karijes@users.sourceforge.net>

	* Added String class.
	* Fixed str_to(lower/upper) since optimizations flags
	do funny things with it.