@@ -79,6 +79,7 @@ AC_SUBST(EDELIB_PATCH_VERSION)
 AC_SUBST(EDELIB_API_VERSION)
 AC_SUBST(FLTKFLAGS)
 AC_SUBST(FLTKLIBS)
+AC_SUBST(SOUNDLIBS)
 AC_SUBST(SHARED)
 AC_SUBST(DSOFLAGS)
 AC_SUBST(DSOLDFLAGS)
