@@ -3,6 +3,7 @@
 	* Build script tweaks
 	* Removed some warrnings
 	* Added XSet class
+	* Added Sound class
 
 2007-04-06  Sanel <karijes@users.sourceforge.net>
 
